# Android-Space-Shooter

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/smallwonder/spaceshooterdeluxe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/res/: level1.cfg  level2.cfg  level3.cfg  level4.cfg  level5.cfg
app/src/main/cpp/: Background.cpp  Background.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  Constants.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  LICENSE  LevelSelectState.cpp  LevelSelectState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  SplashState.cpp  SplashState.h  State.cpp  State.h  Utils.h  allegro.cmake  main.cpp  native-lib.cpp
app/src/main/java/tech/smallwonder/spaceshooterdeluxe/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/tech/smallwonder/spaceshooterdeluxe/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
